# pdf-analyzer

./: .dockerignore  .gitignore  Dockerfile  README.Docker.md  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/pydantics/: models.py
app/routers/: chat_router.py  health_router.py  pdf_router.py
app/services/: chat_service.py  llm_service.py  pdf_service.py  vector_service.py
app/templates/: prompt_template.py
